# fastapi-ticketapp

./: .pylintrc  README.md  alembic.ini  main.py  pyproject.toml
app/: main.py
app/db/: db.py
app/endpoints/: campania.py  user.py
app/models/: _campania.py  campania.py  user.py
app/repositories/: campania.py  user.py
migrations/: env.py
migrations/versions/: 4392c256ee8e_init_db.py  b89cfcb14691_init_database.py  db14cf7485dd_init_db.py  e4a77afb0a8c_init_db.py
