[tool.poetry]
name = "mati-2"
version = "0.1.0"
description = ""
authors = ["Ilan Emanuel Fritzler <contacto.fritzlerilan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
